Kubernetes_day_04/Ingress_Controller/k8s_yaml_files/app3DeploymentService.yaml
#code for the deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app3-pod
  template:
    metadata:
      labels:
        app: app3-pod
    spec:
      containers:
      - name: app3-container
        image: akhilkumar119/app3-image:v1
        ports:
        - containerPort: 80

---

#ccode for the service file 
apiVersion: v1
kind: Service
metadata:
  name: app3-service #this service name will be referenced in the ingress controller yaml file
spec:
  selector:
     app: app3-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
