Kubernetes_day_04/Ingress_Controller/k8s_yaml_files/appNginxIngressController.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name:  app1-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name:  app2-service
                port: 
                  number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name:  app3-service
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app1-service
                port: 
                  number: 80
